REST-API, delete: hand over the whole target
We already moved away from the idea that the "unique" part is the only
source of truth. This changes the API, user now delete via:
curl \
 -X DELETE \
 http://localhost:8080/api/v1/iscsi/iqn.2019-08.com.linbit:resttest/1
